Update hero heading and body styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <!-- Place favicon.ico in the root directory -->
 
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300|Roboto+Mono:300,500|Roboto+Slab:300" rel="stylesheet">
         <link rel="stylesheet" href="/assets/css/main.css">
     </head>
     <body>
@@ -42,6 +42,7 @@
 
             <div class="hero">
                 <div class="wrapper">
+                  <div class="hero-content">
                     <div class="hero-hd">
                         <h1 class="hdg hdg_1">What if technology could help improve conversations online?</h1>
                     </div>
@@ -51,9 +52,10 @@
                             people stop expressing themselves and give up on
                             seeking different opinions.</p>
                     </div>
+                  </div>
                 </div>
             </div>
-            
+
             <div class="footer">
             </div>
         </div>
