Update styles for hero section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="hero-hd">
                         <h1 class="hdg hdg_1">What if technology could help improve conversations online?</h1>
                     </div>
-                    <div class="hero-bd">
+                    <div class="hero-bd" style="padding-bottom: 200px;">
                         <p>Discussing things you care about can be difficult. The
                             threat of abuse and harassment online means that many
                             people stop expressing themselves and give up on
