Update masthead for scrolling and begin second content block

--- a/index.html
+++ b/index.html
@@ -40,22 +40,43 @@
                 </div>
             </div>
 
-            <div class="hero">
+            <div class="hero hero_main">
                 <div class="wrapper">
-                  <div class="hero-content">
-                    <div class="hero-hd">
-                        <h1 class="hdg hdg_1">What if technology could help improve conversations online?</h1>
-                    </div>
-                    <div class="hero-bd" style="padding-bottom: 200px;">
+                    <div class="hero-content">
+                        <div class="hero-hd">
+                            <h1 class="hdg hdg_1">What if technology could help improve conversations online?</h1>
+                        </div>
+                        <div class="hero-bd" style="padding-bottom: 200px;">
                         <p>Discussing things you care about can be difficult. The
                             threat of abuse and harassment online means that many
                             people stop expressing themselves and give up on
                             seeking different opinions.</p>
+                        </div>
                     </div>
-                  </div>
+                    <div class="down-arrow">
+                        <!--down arrow svg here -->
+                    </div>
                 </div>
             </div>
-
+            <div class="hero hero_two">
+                <div class="wrapper">
+                    <div class="col-one-third">
+                        <!--image here-->
+                    </div>
+                    <div class="col-two-third">
+                        <h3 class="hdg hdg_3">Introducing Perspective</h3>
+                        <div class="hero-bd description"
+                        <p>Perspective is an API that makes it easier to host better conversations.
+                            The API uses machine learning models to score the perceived impact a
+                            comment might have on a conversation. Developers and publishers can use
+                            this score to give realtime feedback to commenters or help moderators do
+                            their job, or allow readers to more easily find relevant information, as
+                            illustrated in two experiments below. We’ll be releasing more machine
+                            learning models later in the year, but our first model identifies whether
+                            a comment could be perceived as “toxic" to a discussion</p>
+                    </div>
+                </div>
+            </div>
             <div class="footer">
             </div>
         </div>
